[mirotalk] - extend Rest API, update dep
