# app/api/join/join.php
@@ -1,0 +1,39 @@
+<?php
+
+$API_KEY_SECRET = "mirotalk_default_secret";
+$MIROTALK_URL = "https://p2p.mirotalk.com/api/v1/join";
+// $MIROTALK_URL = "http://localhost:3000/api/v1/join";
+// $MIROTALK_URL = "https://mirotalk.up.railway.app/api/v1/join";
+
+$ch = curl_init();
+curl_setopt($ch, CURLOPT_URL, $MIROTALK_URL);
+curl_setopt($ch, CURLOPT_RETURNTRANSFER, 1);
+curl_setopt($ch, CURLOPT_POST, 1);
+
+$headers = [
+    'authorization:' . $API_KEY_SECRET,
+    'Content-Type: application/json'
+];
+
+curl_setopt($ch, CURLOPT_HTTPHEADER, $headers);
+
+$data = array(
+    "room"          => "test",
+    "name"          => "mirotalk",
+    "audio"         => true,
+    "video"         => true,
+    "screen"        => false,
+    "hide"          => false,
+    "notify"        => true,
+);
+$data_string = json_encode($data);
+
+curl_setopt($ch, CURLOPT_POSTFIELDS, $data_string);
+$response = curl_exec($ch);
+$httpcode = curl_getinfo($ch, CURLINFO_HTTP_CODE);
+
+curl_close($ch);
+
+echo "Status code: $httpcode \n";
+$data = json_decode($response);
+echo "join: ", $data->{'join'}, "\n";
