# app/api/swagger.yaml
@@ -1,8 +1,8 @@
 swagger: '2.0'
 
 info:
-    title: MiroTalk API
-    description: API description for external applications that integrates with MiroTalk.
+    title: MiroTalk P2P API
+    description: API description for external applications that integrates with MiroTalk P2P.
     version: 1.0.0
 
 basePath: /api/v1
@@ -31,6 +31,54 @@ paths:
                         $ref: '#/definitions/MeetingResponse'
                 '403':
                     description: 'Unauthorized!'
+    /join:
+        post:
+            tags:
+                - 'join'
+            summary: 'Create direct join'
+            description: 'Create join'
+            parameters:
+                - in: body
+                  name: Join
+                  description: Custom Join URL.
+                  schema:
+                      type: object
+                      required:
+                          - room
+                          - name
+                          - audio
+                          - video
+                          - screen
+                          - hide
+                          - notify
+                      properties:
+                          room:
+                              type: string
+                          name:
+                              type: string
+                          audio:
+                              type: boolean
+                          video:
+                              type: boolean
+                          screen:
+                              type: boolean
+                          hide:
+                              type: boolean
+                          notify:
+                              type: boolean
+            consumes:
+                - 'application/json'
+            produces:
+                - 'application/json'
+            security:
+                - secretApiKey: []
+            responses:
+                '200':
+                    description: 'Direct join created'
+                    schema:
+                        $ref: '#/definitions/JoinResponse'
+                '403':
+                    description: 'Unauthorized!'
 
 securityDefinitions:
     secretApiKey:
@@ -44,4 +92,9 @@ definitions:
         type: 'object'
         properties:
             meeting:
+                type: 'string'
+    JoinResponse:
+        type: 'object'
+        properties:
+            join:
                 type: 'string'
